--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.0.0",
     "@fontsource/geist-mono": "^5.0.0",
+    "@fontsource/inter": "^5.0.0",
+    "@fontsource/manrope": "^5.0.0",
     "@fontsource/playfair-display": "^5.2.8",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
