update_package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npm --prefix server install",
+    "vercel-build": "npm --prefix server install"
   },
   "dependencies": {
     "@fontsource/geist-mono": "^5.0.0",
