--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
-        "dev": "node --watch index.js"
+        "dev": "node --watch index.js",
+        "vercel-build": "echo 'Backend dependencies installed'"
     },
     "dependencies": {
         "@sendgrid/mail": "^8.1.6",
