--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "type": "module",
   "engines": {
     "node": "18.x"
+  },
+  "scripts": {
+    "vercel-build": "npm install --prefix backend/server"
+  },
+  "dependencies": {
+    "@vercel/node": "^3.0.0",
+    "serverless-http": "^3.0.0"
   }
 }
