--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/static-build" },
-    { "src": "api/index.js", "use": "@vercel/node" }
+    { "src": "api/handler.js", "use": "@vercel/node" },
+    { "src": "api/health.js", "use": "@vercel/node" },
+    { "src": "api/test.js", "use": "@vercel/node" },
+    { "src": "api/db-test.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/api/health", "dest": "/api/health.js" },
+    { "src": "/api/test", "dest": "/api/test.js" },
+    { "src": "/api/db-test", "dest": "/api/db-test.js" },
+    { "src": "/api/(.*)", "dest": "/api/handler.js" }
   ]
 }
