--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "node": "18.x"
   },
   "scripts": {
-    "vercel-build": "npm install --prefix backend/server"
+    "vercel-build": "echo 'Deployment successful'"
   },
   "dependencies": {
-    "@vercel/node": "^3.0.0",
+    "@vercel/node": "^3.2.29",
     "serverless-http": "^3.0.0"
   }
 }
