--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "scripts": {
-    "vercel-build": "echo 'Deployment successful'"
+    "start": "node server.js",
+    "vercel-build": "npm install --prefix backend/server && echo 'Deployment successful'"
   },
   "dependencies": {
     "@vercel/node": "^3.2.29",
